Fix header-text overlap on mobile view

--- a/style.css
+++ b/style.css
@@ -360,7 +360,7 @@ nav .fa-solid{
         background-image: url(images/mobile_cover.jpg);
     }
     .header-text {
-        margin-top: 100%;
+        margin-top: 40%;
         font-size: 18px;
     }
     .header-text h1 {
